--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -2,30 +2,50 @@
     "email":"Email",
     "password":"Password",
     "logIn":"Log In",
+
     "invalidEmailTittle":"Invalid Email Formating",
     "invalidEmailBody":"Please check your email and try again.",
+
     "userNotFoundTitle":"Can't Find Account",
     "userNotFoundBody":"We can't find an account with that email. Try another email, or sign up.",
+
     "wrongPasswordTittle":"Incorrect Password",
     "wrongPasswordBody":"The password you entered is incorrect.",
-    "tooManyRequestsTittle":"Too Much Traffic",
-    "tooManyRequestsBody":"We're sorry! Our servers are full at the moment, please try again another time.",
+
     "userDisabledTittle":"Account Disabled",
     "userDisabledBody":"Your account has been disabled. Please contact us at conetechnologiesdev@gmail.com.",
+
+    "weakPasswordTitle":"Weak Password",
+    "weakPasswordBody":"Update your password and try again.",
+
     "defaultErrorTittle":"Something Went Wrong",
-    "defaultErrorBody":"Please try again later or reach out to conetechnologiesdev@gmail.com",
+    "defaultErrorBody":"Please try again later or reach out to conetechnologiesdev@gmail.com.",
+
+    "emailAlreadyInUseTitle":"Email Already In-Use",
+    "emailAlreadyInUseBody":"An account with that email already exists",
+
+    "forgotPasswordTittle":"You've Got Mail!",
+    "forgotPasswordBody":"Check your email for a password reset link.",
+
+    "exitCreateAccountTitle":"Return to login",
+    "exitCreateAccountBody":"Are you sure you want to go back? your information will be deleted.",
+
+    "stay":"Stay",
+    "go":"Go Back",
     "tryAgain":"Try Again",
     "signUp":"Sign Up",
     "forgotPassword":"Forgot Password?",
-    "forgotPasswordTittle":"You've Got Mail!",
-    "forgotPasswordBody":"Check your email for a password reset link.",
-    "channelErrorBody":"Make sure you entered an email in the correct feild.",
+
+
     "close":"Close",
     "likes":"Likes",
     "followers":"Followers",
     "following":"Following",
-    "editProfile":"Edit Profile"
-    
+    "editProfile":"Edit Profile",
+    "firstName":"First Name",
+    "lastName":"Last Name",
+    "userName":"Username",
+    "previous":"Previous"
 
 
 
