read optimazation, ui, refresh, feed algo, bug fix

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -46,6 +46,7 @@
 
     "close":"Close",
     "likes":"Likes",
+    "follow":"Follow",
     "followers":"Followers",
     "following":"Following",
     "editProfile":"Edit Profile",
