created start of bio editing

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -64,7 +64,7 @@
     "tooManyChar":"Too many characters.",
     "tooManyLine":"Too many newlines.",
 
-    "emptyFieldError":"Make sure all feilds are filled."
+    "emptyFieldError":"Make sure all feilds are filled.",
 
-
+    "bioTitle":"Bio"
 }
