delete account button

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -74,6 +74,7 @@
     "bioTitle":"Bio",
 
     "logOut":"Log Out",
+    "deleteAccount":"Delete Account",
     "darkMode":"Dark Mode",
     "addComment":"Add a comment"
 }
