--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -80,5 +80,6 @@
 
     "welcomeTo":"Welcome to",
     "welcomeBack":"Welcome Back",
-    "createAccount":"Create Account"
+    "createAccount":"Create Account",
+    "cont":"Continue"
 }
