--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -33,7 +33,7 @@
     "exitCreateAccountBody":"Are you sure you want to go back? your information will be deleted.",
 
     "stay":"Stay",
-    "go":"Go Back",
+    "goBack":"Go Back",
     "tryAgain":"Try Again",
     "signUp":"Sign Up",
     "forgotPassword":"Forgot Password?",
@@ -85,5 +85,9 @@
     "createAnAccount":"Create an Account",
     "cont":"Continue",
     "dateOfBirth":"Date of Birth",
-    "usernameAndPassword":"Username and Password"
+    "usernameAndPassword":"Username and Password",
+
+    "deleteAcountTitle":"Are you sure you want to delete your account?",
+    "deleteAcountBody":"All account data will be deleted. This action cannot be undone. Press \"Go Back\" to cancel",
+    "delete":"Delete"
 }
