--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -89,5 +89,8 @@
 
     "deleteAcountTitle":"Are you sure you want to delete your account?",
     "deleteAcountBody":"All account data will be deleted. This action cannot be undone. Press \"Go Back\" to cancel",
-    "delete":"Delete"
+    "delete":"Delete",
+
+    "searchUsername":"Search username...",
+    "noResultsFound":"No results found."
 }
