--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -92,5 +92,7 @@
     "delete":"Delete",
 
     "searchUsername":"Search username...",
-    "noResultsFound":"No results found."
+    "noResultsFound":"No results found.",
+    "confirmation":"Confirmation",
+    "cancel":"Cancel"
 }
