--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -94,5 +94,8 @@
     "searchUsername":"Search username...",
     "noResultsFound":"No results found.",
     "confirmation":"Confirmation",
-    "cancel":"Cancel"
+    "cancel":"Cancel",
+    "resetPassword":"Reset Password",
+    "sendResetLink":"Send reset link",
+    "ok":"Ok"
 }
