made save button conditional

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -77,7 +77,7 @@
     "deleteAccount":"Delete Account",
     "darkMode":"Dark Mode",
     "addComment":"Add a comment",
-
+    "settings":"Settings",
     "welcome":"Welcome",
     "welcomeTo":"Welcome to",
     "welcomeBack":"Welcome Back",
