started with notifications

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -107,5 +107,6 @@
     "cancel":"Cancel",
     "resetPassword":"Reset Password",
     "sendResetLink":"Send reset link",
-    "ok":"Ok"
+    "ok":"Ok",
+    "recentActivity":"Recent Activity"
 }
