--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -109,5 +109,6 @@
     "sendResetLink":"Send reset link",
     "ok":"Ok",
     "recentActivity":"Recent Activity",
-    "nothingToSeeHere":"Nothing to see here!"
+    "nothingToSeeHere":"Nothing to see here!",
+    "commentText":"Someone commented on your post:"
 }
