--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -36,7 +36,7 @@
     "forgotPasswordTittle":"You've Got Mail!",
     "forgotPasswordBody":"Check your email for a password reset link.",
 
-    "exitCreateAccountTitle":"Return to welcome page",
+    "exitCreateAccountTitle":"Return to welcome page?",
     "exitCreateAccountBody":"Are you sure you want to go back? your information will be deleted.",
 
     "exitEditProfileTitle":"Are you sure you want to exit?",
