--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -105,7 +105,8 @@
     "deleteAcountBody":"All account data will be deleted. This action cannot be undone. Press \"Go Back\" to cancel",
     "delete":"Delete",
     "save":"Save",
-    "searchUsername":"Search username...",
+    "searchUsername":"Search users...",
+    "search":"Search",
     "noResultsFound":"No results found.",
     "confirmation":"Confirmation",
     "cancel":"Cancel",
