changed compose, started groups ui

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -115,5 +115,6 @@
     "ok":"Ok",
     "recentActivity":"Recent Activity",
     "nothingToSeeHere":"Nothing to see here!",
-    "commentText":"Someone commented on your post:"
+    "commentText":"Someone commented on your post:",
+    "groups":"Groups"
 }
