signed out on uninstall changed navigation

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -118,6 +118,8 @@
     "commentText":"Someone commented on your post:",
     "groups":"Groups",
     "next":"Next",
-    "description":"Description(Optional)"
+    "description":"Description(Optional)",
+    "skip":"Skip",
+    "done":"Done"
 
 }
