basic group system working

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -120,6 +120,9 @@
     "next":"Next",
     "description":"Description(Optional)",
     "skip":"Skip",
-    "done":"Done"
+    "done":"Done",
+    "public":"Public",
+    "selectAudience":"Select Audience:",
+    "myGroups":"My groups"
 
 }
