comment replies and multiple tags in comment

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -123,6 +123,7 @@
     "done":"Done",
     "public":"Public",
     "selectAudience":"Select Audience:",
-    "myGroups":"My groups"
+    "myGroups":"My groups",
+    "reply":"Reply"
 
 }
