more robust tags, new activity changes

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -124,6 +124,7 @@
     "public":"Public",
     "selectAudience":"Select Audience:",
     "myGroups":"My groups",
-    "reply":"Reply"
+    "reply":"Reply",
+    "userNotFound":"User Not Found"
 
 }
