changed comment pressed order of functions and other stuff

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -1,129 +1,108 @@
 {
-    "post":"Post",
-    "email":"Email",
-    "password":"Password",
-    "confirmPassword":"Confirm Password",
-    "logIn":"Login",
-
-    "invalidUserName":"Username does not meet requirements",
-    "available":"Available",
-    "usernameInUse":"Username Unavilable",
-
-    "usernameTakenTitle":"This Username has been taken.",
-    "usernameTakenBody":"Please go back and choose a diffrent username.",
-
-    "invalidEmailTittle":"Invalid Email Formating",
-    "invalidEmailBody":"Please check your email and try again.",
-
-    "userNotFoundTitle":"Can't Find Account",
-    "userNotFoundBody":"We can't find an account with that email. Try another email, or sign up.",
-
-    "wrongPasswordTittle":"Incorrect Password",
-    "wrongPasswordBody":"The password you entered is incorrect.",
-
-    "userDisabledTittle":"Account Disabled",
-    "userDisabledBody":"Your account has been disabled. Please contact us at conetechnologiesdev@gmail.com.",
-
-    "weakPasswordTitle":"Weak Password",
-    "weakPasswordBody":"Check password requirements and try again.",
-
-    "defaultErrorTittle":"Something Went Wrong",
-    "defaultErrorBody":"Please try again later or reach out to conetechnologiesdev@gmail.com.",
-
-    "emailAlreadyInUseTitle":"Email Already In-Use",
-    "emailAlreadyInUseBody":"An account with that email already exists",
-
-    "forgotPasswordTittle":"You've Got Mail!",
-    "forgotPasswordBody":"Check your email for a password reset link.",
-
-    "exitCreateAccountTitle":"Return to welcome page?",
-    "exitCreateAccountBody":"Are you sure you want to go back? your information will be deleted.",
-
-    "exitEditProfileTitle":"Are you sure you want to exit?",
-    "exitEditProfileBody":"All changes will be lost.",
-    "stay":"Stay",
-    "exit":"Exit",
-    "goBack":"Go Back",
-    "tryAgain":"Try Again",
-    "signUp":"Sign Up",
-    "forgotPassword":"Forgot Password?",
-
-    "passwordLen":"Between 8 and 32 characters.",
-    "passwordLower":"Contains a lowercase letter",
-    "passwordUpper":"Contains a uppercase letter",
-    "passwordNumber":"Contains a number",
-    "passwordSpecial":"Contains a special character",
-    "passwordMatch":"Passwords match",
-
-    "close":"Close",
-    "likes":"Likes",
-    "follow":"Follow",
-    "followers":"Followers",
-    "following":"Following",
-    "editProfile":"Edit Profile",
-    "name":"Name",
-    
-    "userName":"Username",
-    "previous":"Previous",
-    "followingTab":"Following",
-    "popularTab":"Popular",
-    "newTab":"New",
-    "oldTab":"Old",
-
-    "postTitle":"Title",
-    "postBody":"Body",
-    "newLines":"New Lines",
-    "characters":"Characters",
-    "addText":"Add text...",
-    "addTitle":"Add title...",
-
-    "createNewPost":"Create new post",
-    "postButton":"POST",
-    "clear":"Clear",
-    "tooManyChar":"Too many characters.",
-    "tooManyLine":"Too many newlines.",
-
-    "emptyFieldError":"Make sure all feilds are filled.",
-
-    "bioTitle":"Bio",
-
-    "logOut":"Log Out",
-    "deleteAccount":"Delete Account",
-    "darkMode":"Dark Mode",
-    "addComment":"Add a comment",
-    "settings":"Settings",
-    "welcome":"Welcome",
-    "welcomeTo":"Welcome to",
-    "welcomeBack":"Welcome Back",
-    "createAccount":"Create Account",
-    "createAnAccount":"Create an Account",
-    "cont":"Continue",
-    "dateOfBirth":"Date of Birth",
-    "createAPassword":"Create a Password",
-
-    "deleteAcountTitle":"Are you sure you want to delete your account?",
-    "deleteAcountBody":"All account data will be deleted. This action cannot be undone. Press \"Go Back\" to cancel",
-    "delete":"Delete",
-    "save":"Save",
-    "searchUsername":"Search users...",
-    "search":"Search",
-    "noResultsFound":"No results found.",
-    "confirmation":"Confirmation",
-    "cancel":"Cancel",
-    "resetPassword":"Reset Password",
-    "sendResetLink":"Send reset link",
-    "ok":"Ok",
-    "recentActivity":"Recent Activity",
-    "nothingToSeeHere":"Nothing to see here!",
-    "commentText":"Someone commented on your post:",
-    "groups":"Groups",
-    "next":"Next",
-    "description":"Description(Optional)",
-    "skip":"Skip",
-    "done":"Done",
-    "public":"Public",
-    "selectAudience":"Select Audience:",
-    "myGroups":"My groups",
-    "reply":"Reply"
-
+    "post": "Post",
+    "email": "Email",
+    "password": "Password",
+    "confirmPassword": "Confirm Password",
+    "logIn": "Login",
+    "invalidUserName": "Username does not meet requirements",
+    "available": "Available",
+    "usernameInUse": "Username Unavilable",
+    "usernameTakenTitle": "This Username has been taken.",
+    "usernameTakenBody": "Please go back and choose a diffrent username.",
+    "invalidEmailTittle": "Invalid Email Formating",
+    "invalidEmailBody": "Please check your email and try again.",
+    "userNotFoundTitle": "Can't Find Account",
+    "userNotFoundBody": "We can't find an account with that email. Try another email, or sign up.",
+    "wrongPasswordTittle": "Incorrect Password",
+    "wrongPasswordBody": "The password you entered is incorrect.",
+    "userDisabledTittle": "Account Disabled",
+    "userDisabledBody": "Your account has been disabled. Please contact us at conetechnologiesdev@gmail.com.",
+    "weakPasswordTitle": "Weak Password",
+    "weakPasswordBody": "Check password requirements and try again.",
+    "defaultErrorTittle": "Something Went Wrong",
+    "defaultErrorBody": "Please try again later or reach out to conetechnologiesdev@gmail.com.",
+    "emailAlreadyInUseTitle": "Email Already In-Use",
+    "emailAlreadyInUseBody": "An account with that email already exists",
+    "forgotPasswordTittle": "You've Got Mail!",
+    "forgotPasswordBody": "Check your email for a password reset link.",
+    "exitCreateAccountTitle": "Return to welcome page?",
+    "exitCreateAccountBody": "Are you sure you want to go back? your information will be deleted.",
+    "exitEditProfileTitle": "Are you sure you want to exit?",
+    "exitEditProfileBody": "All changes will be lost.",
+    "stay": "Stay",
+    "exit": "Exit",
+    "goBack": "Go Back",
+    "tryAgain": "Try Again",
+    "signUp": "Sign Up",
+    "forgotPassword": "Forgot Password?",
+    "passwordLen": "Between 8 and 32 characters.",
+    "passwordLower": "Contains a lowercase letter",
+    "passwordUpper": "Contains a uppercase letter",
+    "passwordNumber": "Contains a number",
+    "passwordSpecial": "Contains a special character",
+    "passwordMatch": "Passwords match",
+    "close": "Close",
+    "likes": "Likes",
+    "follow": "Follow",
+    "followers": "Followers",
+    "following": "Following",
+    "editProfile": "Edit Profile",
+    "name": "Name",
+    "userName": "Username",
+    "previous": "Previous",
+    "followingTab": "Following",
+    "popularTab": "Popular",
+    "newTab": "New",
+    "oldTab": "Old",
+    "postTitle": "Title",
+    "postBody": "Body",
+    "newLines": "New Lines",
+    "characters": "Characters",
+    "addText": "Add text...",
+    "addTitle": "Add title...",
+    "createNewPost": "Create new post",
+    "postButton": "POST",
+    "clear": "Clear",
+    "tooManyChar": "Too many characters.",
+    "tooManyLine": "Too many newlines.",
+    "emptyFieldError": "Make sure all feilds are filled.",
+    "bioTitle": "Bio",
+    "logOut": "Log Out",
+    "deleteAccount": "Delete Account",
+    "darkMode": "Dark Mode",
+    "addComment": "Add a comment",
+    "settings": "Settings",
+    "welcome": "Welcome",
+    "welcomeTo": "Welcome to",
+    "welcomeBack": "Welcome Back",
+    "createAccount": "Create Account",
+    "createAnAccount": "Create an Account",
+    "cont": "Continue",
+    "dateOfBirth": "Date of Birth",
+    "createAPassword": "Create a Password",
+    "deleteAcountTitle": "Are you sure you want to delete your account?",
+    "deleteAcountBody": "All account data will be deleted. This action cannot be undone. Press \"Go Back\" to cancel",
+    "delete": "Delete",
+    "save": "Save",
+    "searchUsername": "Search users...",
+    "search": "Search",
+    "noResultsFound": "No results found.",
+    "confirmation": "Confirmation",
+    "cancel": "Cancel",
+    "resetPassword": "Reset Password",
+    "sendResetLink": "Send reset link",
+    "ok": "Ok",
+    "recentActivity": "Recent Activity",
+    "nothingToSeeHere": "Nothing to see here!",
+    "commentActivity": "Someone commented on your post:",
+    "tagActivity": "Someone tagged you:",
+    "groups": "Groups",
+    "next": "Next",
+    "description": "Description(Optional)",
+    "skip": "Skip",
+    "done": "Done",
+    "public": "Public",
+    "selectAudience": "Select Audience:",
+    "myGroups": "My groups",
+    "reply": "Reply"
 }
