redid password reset

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -131,5 +131,13 @@
     "usernameReqs":"Usernames must be between 3 and 24 characters. Usernames can only contain lowercase letters, numbers, and underscores.",
 
     "followText":"started following you",
-    "taggedText":"tagged you:"
+    "taggedText":"tagged you:",
+    
+    "badAuthState":"Request is invalid or has expired. Please try again.",
+    "resetPasswordPromt":"Reset password for:",
+
+    "passwordResetTitle":"Password Reset Successfuly",
+    "passwordResetBody":"Please continue to login.",
+    "setPassword":"Set Password"
+
 }
