modified to support web

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -138,6 +138,8 @@
 
     "passwordResetTitle":"Password Reset Successfuly",
     "passwordResetBody":"Please continue to login.",
-    "setPassword":"Set Password"
+    "setPassword":"Set Password",
+
+    "coppiedToClipboard":"Coppied to Clipboard"
 
 }
