minor fixes, changed default initial loader

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -142,6 +142,8 @@
 
     "coppiedToClipboard":"Coppied to Clipboard",
     "download":"Download",
-    "getTheApp":"Get the App"
+    "getTheApp":"Get the App",
+
+    "gifLoadingError":"Failed to load"
 
 }
