changed ui, view likes page doesn't work

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -57,6 +57,7 @@
 
     "close":"Close",
     "likes":"Likes",
+    "comments":"Comments",
     "follow":"Follow",
     "followers":"Followers",
     "following":"Following",
@@ -144,6 +145,7 @@
     "download":"Download",
     "getTheApp":"Get the App",
 
-    "gifLoadingError":"Failed to load"
+    "gifLoadingError":"Failed to load",
+    "viewLikes":"See Likes"
 
 }
