forced correct version

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -146,6 +146,11 @@
     "getTheApp":"Get the App",
 
     "gifLoadingError":"Failed to load",
-    "viewLikes":"See Likes"
+    "viewLikes":"See Likes",
+
+    "updateRequiredTitle":"Update Required",
+    "updateRequiredBody":"Please download the latest update to continue.",
+    "updateAvailable":"Upadate Available",
+    "update":"Update"
 
 }
