minor change for web

--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -164,10 +164,7 @@
     "copied":"Copied",
     "shareProfile":"Share Profile",
 
-    "deleteAcountReAuthWarning":"Please enter your password to confirm you wish to delete your account. This Action cannot be undone. Upon clicking the button below, your account will be deleted."
-
-    
-    "shareProfile":"Share Profile",
+    "deleteAcountReAuthWarning":"Please enter your password to confirm you wish to delete your account. This Action cannot be undone. Upon clicking the button below, your account will be deleted.",
 
     "logIntoApp":"Log in required",
     "logInRequired":"Please log in to access all features of Eko."
