--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -59,7 +59,9 @@
 
     "close":"Close",
     "likes":"Likes",
+    "like":"Like",
     "comments":"Comments",
+    "comment":"Comment",
     "follow":"Follow",
     "followers":"Followers",
     "following":"Following",
@@ -107,6 +109,7 @@
     "deleteAcountTitle":"Are you sure you want to delete your account?",
     "deleteAcountBody":"All account data will be deleted. This action cannot be undone. Press \"Go Back\" to cancel",
     "delete":"Delete",
+    "report":"Report",
     "save":"Save",
     "searchUsername":"Search users...",
     "search":"Search",
@@ -171,5 +174,7 @@
     "logInRequired":"Please log in to access all features of Eko.",
     
     "notInGroup":"You are no longer a member of this group."
+
+    
 
 }
