--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -173,7 +173,17 @@
     "logIntoApp":"Log in required",
     "logInRequired":"Please log in to access all features of Eko.",
     
-    "notInGroup":"You are no longer a member of this group."
+    "notInGroup":"You are no longer a member of this group.",
+
+    "send":"Send",
+    "reportDetails":"Please provide information on why you are reporting this post.",
+    "commentRequired":"Comment Required",
+
+    "tooEarlyDeleteTitle":"Please Wait",
+    "tooEarlyDeleteBody":"Posts may only be deleted 48 hours after they are posted.",
+
+    "deletePostWarningTitle":"Delete Post",
+    "deletePostWarningBody":"Are you sure you wish to procede? This action cannot be undone."
 
     
 
