--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -184,7 +184,10 @@
 
     "deletePostWarningTitle":"Delete Post",
     "deleteCommentWarningTitle":"Delete Comment",
-    "deletePostWarningBody":"Are you sure you wish to procede? This action cannot be undone."
+    "deletePostWarningBody":"Are you sure you wish to procede? This action cannot be undone.",
+
+    "invalidSession":"This Eko account is being used on another device. Press below to continue on this device."
+    
 
     
 
